--- a/css/footer.css
+++ b/css/footer.css
@@ -29,13 +29,32 @@ footer {
   /* 커서 포인터를 바꿀 수 있음. */
   cursor: pointer;
 }
+.footer-icons__desc {
+  margin-top: 5px;
+  font-weight: bold;
+  transform: scale(0.8);
+}
+
+@keyframes icons-둥-둥 {
+  0% {
+    transform: translateY(0px);
+  }
+  30% {
+    transform: translateY(-10px);
+  }
+  70% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
 
 .footer-icons__img {
   width: 30px;
+  animation: 1s icons-둥-둥 infinite;
 }
 
-.footer-icons__desc {
-  font-weight: bold;
-  transform: scale(1);
-  margin-top: 5px;
+.footer-icons:hover .footer-icons__img {
+  animation: 2s icons-둥-둥;
 }
